# labas12

./: CMakeLists.txt
gtest/: gtest-all.cc
text_editor/: CMakeLists.txt  main.cpp
text_editor_lib/: CMakeLists.txt  Exception_class.h  List_Item.h  Stack_on_List.h  Text.cpp  Text.h  Tree.cpp  Tree.h  TreeIterator.cpp  TreeIterator.h  main.cpp
text_editor_test/: CMakeLists.txt  iterator_tests.cpp  text_tests.cpp  tree_tests.cpp
