Ô ªøcmake_minimum_required(VERSION 2.8)
#–ü—Ä–æ–≤–µ—Ä–∫–∞ –≤–µ—Ä—Å–∏–∏ CMake.
    set(PROJECT_NAME Test)
#–°–æ–∑–¥–∞–µ–º –æ–±—ã—á–Ω—É—é –ª–æ–∫–∞–ª—å–Ω—É—é –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é —Å –∏–º–µ–Ω–µ–º –ø—Ä–æ–µ–∫—Ç–∞
    project($
	    {
	    PROJECT_NAME}

)
#–ù–∞–∑–≤–∞–Ω–∏–µ –ø—Ä–æ–µ–∫—Ç–∞
    set(text_editor text_editor)
#–ü–µ—Ä–µ–º–µ–Ω–Ω–∞—è —Å –∏–º–µ–Ω–µ–º –±–∏–±–ª–∏–æ—Ç–µ–∫–∏
    set(text_editor_lib text_editor_lib)
#–ü–µ—Ä–µ–º–µ–Ω–Ω–∞—è —Å –∏–º–µ–Ω–µ–º –±–∏–±–ª–∏–æ—Ç–µ–∫–∏
    set(text_editor_test text_editor_test)
    set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs"
	FORCE)
#–°–æ–∑–¥–∞–µ—Ç—Å—è –ø–µ—Ä–µ–º–µ–Ω–Ω–∞—è CMAKE_CONFIGURATION_TYPES —Å–æ –∑–Ω–∞—á–µ–Ω–∏–µ–º "Debug;Release" –∏ –º–µ—Ç–∫–æ–π/—Ä–∞–∑–¥–µ–ª–æ–º Configs, –ø–µ—Ä–µ–º–µ–Ω–Ω–∞—è —Å–æ—Ö—Ä–∞–Ω–∏–µ—Ç—Å—è –≤ —Å–ø–µ—Ü–∏–∞–ª—å–Ω–æ–º —Ñ–∞–π–ª–µ –¥–æ—Å—Ç—É–ø–Ω–æ–º –∏–∑ –≤—Å–µ—Ö —Ñ–∞–π–ª–æ–≤,
    if (NOT CMAKE_BUILD_TYPE)
#–ø—Ä–æ–≤–µ—Ä–∫–∞ –∏–º–µ—é—â–∏—Ö—Å—è —É –∫–æ–º–ø–∏–ª—è—Ç–æ—Ä–∞ –≤–∞—Ä–∏–∞–Ω—Ç–æ–≤ —Å–±–æ—Ä–∫–∏
    set(CMAKE_BUILD_TYPE Release)
#–ï—Å–ª–∏ –Ω–µ—Ç —Ç–æ —É—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º Release
	endif()
	include_directories($
			    {
			    CMAKE_CURRENT_SOURCE_DIR}
			    /text_editor_lib)
    include_directories($
			{
			CMAKE_CURRENT_SOURCE_DIR}

			/gtest)
    add_subdirectory(text_editor)
#–°–æ–±–∏—Ä–∞–µ–º –ø—Ä–æ–µ–∫—Ç –≤ –ø–æ–¥–¥–∏—Ä–µ–∫—Ç–æ—Ä–∏–∏ vector
    add_subdirectory(text_editor_lib)
#–°–æ–±–∏—Ä–∞–µ–º –ø—Ä–æ–µ–∫—Ç –≤ –ø–æ–¥–¥–∏—Ä–µ–∫—Ç–æ—Ä–∏–∏ lib
    add_subdirectory(text_editor_test)
    add_subdirectory(gtest)
#file(GLOB hdrs "*.h*") #–î–æ–±–∞–≤–ª—è–µ–º –≤ –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é hdrs –≤—Å–µ —Ñ–∞–π–ª—ã —Å —Ä–∞—Å—à–∏—Ä–µ–Ω–∏–µ–º .h
#file(GLOB srcs "*.cpp") #–î–æ–±–∞–≤–ª—è–µ–º –≤ –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é srcs –≤—Å–µ —Ñ–∞–π–ª—ã —Å —Ä–∞—Å—à–∏—Ä–µ–Ω–∏–µ–º .h
